package behavioral.observer.bt4;

public interface TopicListener {
    void listen(TinTuc t);
}
